# localStockBotAlpaca

./: index.html  main.py  plotTest.py  plottest.ipynb  pyproject.toml  requirements.txt
