[project]
name = "stonks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alpaca-py>=0.43.4",
    "ipython>=9.14.1",
    "matplotlib>=3.10.9",
    "nbformat>=5.10.4",
    "ollama>=0.6.2",
    "openai>=2.41.0",
    "openai-agents>=0.17.4",
    "plotly>=6.8.0",
    "pydantic>=2.13.4",
    "pydantic-core>=2.46.4",
]
